--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "hexo-site",
+  "name": "tomek.wiszniewski.cc",
   "version": "0.0.0",
   "private": true,
   "hexo": {
     "version": "3.2.0"
   },
-  "dependencies": {
+  "scripts": {
+    "serve": "hexo server"
+  },
+  "devDependencies": {
     "hexo": "^3.2.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
