--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "version": "3.2.0"
   },
   "scripts": {
-    "serve": "hexo server"
+    "start": "concurrently 'hexo generate --watch' 'budo --dir=public --live --open'"
   },
-  "devDependencies": {
+  "dependencies": {
     "hexo": "^3.2.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
@@ -18,5 +18,9 @@
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-renderer-marked": "^0.2.10",
     "hexo-server": "^0.2.0"
+  },
+  "devDependencies": {
+    "budo": "^8.2.2",
+    "concurrently": "^2.0.0"
   }
 }
