--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "version": "3.2.0"
   },
   "scripts": {
-    "start": "concurrently 'hexo generate --watch' 'budo --dir=public --live --open'"
+    "start": "concurrently 'hexo generate --watch' 'budo --dir=public --live --open'",
+    "deploy": "surge --domain=tomek.wiszniewski.cc --project=public"
   },
   "dependencies": {
     "hexo": "^3.2.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "budo": "^8.2.2",
-    "concurrently": "^2.0.0"
+    "concurrently": "^2.0.0",
+    "surge": "^0.17.7"
   }
 }
