--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Thoughts on static sites
-subtitle: A tiny blog by Tomek Wiszniewski
+title: on progressive web apps
+subtitle: occasional thoughts by Tomek Wiszniewski
 description:
 author: Tomek Wiszniewski
 language:
