--- a/_theme-config.yml
+++ b/_theme-config.yml
@@ -12,7 +12,7 @@ default_post_title: Untitled
 # Comments. Choose one by filling up the information
 comments:
   # Disqus comments
-  disqus_shortname:
+  disqus_shortname: tomek-wiszniewski-cc
   # Facebook comments
   facebook:
     appid:
