--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/clean-blog"]
 	path = themes/clean-blog
-	url = git@github.com:tomekwi/hexo-theme-clean-blog
+	url = https://github.com/tomekwi/hexo-theme-clean-blog.git
