--- a/_theme-config.yml
+++ b/_theme-config.yml
@@ -22,7 +22,7 @@ comments:
     comment_colorscheme: light
 
 # Google Analytics Tracking ID
-google_analytics:
+google_analytics: UA-77262973-1
 
 # Social Accounts
 twitter_url: https://twitter.com/tomekwi_
