--- a/_theme-config.yml
+++ b/_theme-config.yml
@@ -25,5 +25,6 @@ comments:
 google_analytics: UA-77262973-1
 
 # Social Accounts
-twitter_url: https://twitter.com/tomekwi_
 github_url: https://github.com/tomekwi
+twitter_url: https://twitter.com/tomekwi_
+linkedin_url: https://www.linkedin.com/in/tomek-wiszniewski-4b4242117
