Update twitter handle

--- a/_theme-config.yml
+++ b/_theme-config.yml
@@ -26,5 +26,5 @@ google_analytics: UA-77262973-1
 
 # Social Accounts
 github_url: https://github.com/tomekwi
-twitter_url: https://twitter.com/tomekwi_
+twitter_url: https://twitter.com/thetomekwi
 linkedin_url: https://www.linkedin.com/in/tomek-wiszniewski-4b4242117
